# TalkingVid_AI

./: README.md  TalkingVid_AI.py  environment.yml  pyproject.toml
